tests/golden/type_errors/record_pattern_duplicate_field.err
Type error at 4:21: duplicate field `name` in record pattern for struct `Person`
    Person { name: _, name: _ } => "duplicate",
                      ^
